@@ -122,6 +122,12 @@
   <h1>News</h1>
 
   <dl>
+    <dt>January 28, 2013</dt>
+    <dd>
+      <a href="http://wiki.octave.org/OctConf_2013">OctConf 2013</a>
+      will take place in Milano, Italy during June 24-26, 2013. All
+      Octave users, developers, and enthusiasts are welcome to attend!
+    </dd>
     <dt>August 1, 2012</dt>
     <dd>
       <a href="http://jordi.inversethought.com/blog/socis-2012-students/">ESA
@@ -154,15 +160,6 @@
       minor bug-fixing release. See
       the <a href="NEWS-3.6.html">NEWS</a> file for a list of
       user-visible changes since 3.4.
-    </dd>
-    <dt>April 23, 2012</dt>
-    <dd>
-      Octave will be participating
-      in <a href="http://www.google-melange.com/gsoc/homepage/google/gsoc2012">Google
-      Summer of Code 2012</a> with three students. Congratulations to
-      Max Brister, Jacob Dawid, and Benjamin Lewis who will be working
-      respectively on JIT compiling, finishing our native GUI, and
-      least squares spectral analysis.
     </dd>
   </dl>
 
