@@ -17,6 +17,12 @@
 <div class="content">
 
 <dl>
+    <dt>January 28, 2013</dt>
+    <dd>
+      <a href="http://wiki.octave.org/OctConf_2013">OctConf 2013</a>
+      will take place in Milano, Italy during June 24-26, 2013. All
+      Octave users, developers, and enthusiasts are welcome to attend!
+    </dd>
     <dt>August 1, 2012</dt>
     <dd>
       <a href="http://jordi.inversethought.com/blog/socis-2012-students/">ESA
